Update launcher scripts.
git-svn-id: https://svn.apache.org/repos/asf/avalon/trunk@11285 13f79535-47bb-0310-9956-ffa450edef68